--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ ul {
     position: absolute;
     top: 0;
     left: 0;
-    transition: all ease-out .7s;
+    transition: all cubic-bezier(1, 0, 0, 1) .7s;
 }
 
 .slider__images {
