--- a/style.css
+++ b/style.css
@@ -3,6 +3,14 @@ ul {
     padding: 0;
 }
 
+.wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+}
+
 .slider-container {
     display: flex;
     justify-content: center;
@@ -39,7 +47,7 @@ ul {
     justify-content: space-between;
     position: absolute;
     width: 402px;
-    top: 23%;
+    top: 50%;
 }
 
 .slider__button-svg {
